--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
+/*
+Theme Name:
+Theme URI:
+Author:
+Author URI:
+Description:
+Version: 0.1
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags:
+Text Domain:
+*/
 
+* {
+  margin:0;
+}
+
+body {
+  font-family:monospace;
+}
