--- a/style.less
+++ b/style.less
@@ -9,6 +9,7 @@ Tags:
 Text Domain:
 */
 
+/* Mini-Normalizer */
 * {
     margin:0;
 }
@@ -17,14 +18,22 @@ body {
     font-family:monospace;
 }
 
-.entry{    
+/* Artikel mittig platzieren */
+.entry {    
     max-width: 50em;
     margin: 3em auto;
     background: yellow;
     padding: 3em;
 }
 
+/* Bild füllend im Artikel darstellen */
 .entry img  {
     width: 100%;
     height: auto;
+}
+
+/* Abstand bei Bildern und iFrames */
+.entry img, 
+.entry iframe {
+    padding: 1em 0;
 }
