--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* 
     Theme Name: Leeres Theme
     Theme URI:
-    Author: Elisa Demonkí
+    Author: 
     Author URI:
     Description:
     Version: 0.1.0
